Fixes gallery image alignment to center. css glitch is caused by filter `use_default_gallery_style` at wp-includes/media.php
Fixes #66

--- a/style.less
+++ b/style.less
@@ -489,6 +489,10 @@ img.wp-post-image {
 	margin-bottom:1.777em;
 }
 
+.gallery img {
+	margin-left: auto;
+	margin-right: auto;
+}
 
 /**
  * Comments
